# Bezmos

./: .clang-format  CMakeLists.txt  LICENSE  README.md
App/: main.cpp
Core/: App.cpp  App.h  Dot.h  Layer.h  Window.cpp  Window.h
src/: main.cpp
